# BimberZ

./: Cargo.toml  LICENSE.txt  README.md  grammar.md  test.bz  test2.bz
examples/: cellular_automata.rs  ops.rs  paint.rs  pong.rs  spiral.rs
src/: lib.rs  main.rs  shader.wgsl
src/drawing/: color.rs  frame.rs  framebuffer.rs  input.rs  mod.rs  pixelbuffer.rs  window.rs
src/drawing/backend/: mod.rs  rendering.rs  shader.wgsl  window.rs
src/drawing/renderer/: bindings.rs  mod.rs  program.rs  scene.rs  shape.rs  template.wgsl  uniforms.rs
src/drawing/shapes/: circle.rs  coloring.rs  composite.rs  mod.rs  rect.rs  shape.rs  transf.rs
src/engine/: color.rs  egui_integration.rs  fps_counter.rs  input.rs  mod.rs  window.rs
src/engine/renderer/: context.rs  egui_integration.rs  mod.rs  raymarcher.rs  scene.rs  shape.rs  uniforms.rs  viewport.rs
src/engine/renderer/shaders/: base.wgsl  template.wgsl
src/interpreter/: environment.rs  interpreter.rs
src/math/: mod.rs  rect.rs  transf.rs  vector.rs
src/parser/: error.rs  lexer.rs  mod.rs  parser.rs  token.rs
