[package]
name = "bimberz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
pollster = "0.3.0"
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
phf = { version = "0.11.2", features = ["macros"] }
