[package]
name = "bimberz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
pollster = "0.3.0"
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
phf = { version = "0.11.2", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
delegate = "0.11.0"
glam = { version = "0.27.0", features = ["bytemuck"] }
